adding modified files

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>sun light water</h1>
+    <header>
+         <h1>Todo List</h1>
+    </header>
+   <form>
+       <input type="text">
+    <input type="number"  max="12" min="1" placeholder="m" required>
+    <input type="number"  max="31" min="1" placeholder="d" required>
+      <button>add into list</button>
+   </form>
+    <div class="sort">
+        <button>sort by time</button>
+    </div>
+  
+    <section></section>
+    
 </body>
+<script src="./app.js"></script>
 </html>
